# cooper-im-client

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
config/: IMDefine.hpp
core/: IMKernel.cpp  IMKernel.hpp
data/: DataSync.cpp  DataSync.hpp
define/: IMDefine.hpp
entity/: Entity.cpp  Entity.hpp
media/call/audio/: AudioReader.cpp  AudioReader.hpp  AudioWriter.cpp  AudioWriter.hpp
media/call/video/: VideoReader.cpp  VideoReader.hpp
media/player/: PacketQueue.cpp  PacketQueue.hpp  VideoPlayer.cpp  VideoPlayer.hpp
media/recorder/: AudioRecorder.cpp  AudioRecorder.hpp  SaveVideoFileThread.cpp  SaveVideoFileThread.hpp  VideoRecorder.cpp  VideoRecorder.hpp  common.hpp
mediator/: INetMediator.hpp  TcpClientMediator.cpp  TcpClientMediator.hpp
mock/: Mock.cpp  Mock.hpp  MockData.cpp  MockData.hpp
net/: INet.hpp  TcpClientNet.cpp  TcpClientNet.hpp
res/: res.qrc
res/html/: a.html  chat.html  friend_chat.html
static/: a.html
store/: IMStore.cpp  IMStore.hpp
test/: AudioRWTest.cpp  CommonTest.cpp  FGSWidgetTest.cpp  LiveLobbyWidgetTest.cpp  LivePlayerDialogTest.cpp  LiveRecordDialogTest.cpp  LiveRoomItemTest.cpp  MouseTrackTest.cpp  OpenCV1Test.cpp  OpenCV2Test.cpp  OpenLiveWidgetTest.cpp  PostPyqWidgetTest.cpp  PyqItemTest.cpp  PyqWidgetTest.cpp  ShardUploadFileTest.cpp  SqliteTest.cpp  TimeTest.cpp  UploadFileTest.cpp  WebEngineViewTest.cpp
util/: HttpUtil.cpp  HttpUtil.hpp
view/: AFDialog.cpp  AFDialog.hpp  AFDialog.ui  ApplyNotifyItem.cpp  ApplyNotifyItem.hpp  ApplyNotifyItem.ui  AudioCallDialog.cpp  AudioCallDialog.hpp  AudioCallDialog.ui  CGWidget.cpp  CGWidget.hpp  CGWidget.ui  ChatDialog.cpp  ChatDialog.hpp  ChatDialog.ui  ChatItem.cpp  ChatItem.hpp  ChatItem.ui  CotPWidget.cpp  CotPWidget.hpp  CotPWidget.ui  ExploreItem.cpp  ExploreItem.hpp  ExploreItem.ui  FANItem.cpp  FANItem.hpp  FANItem.ui  FGSWidget.cpp  FGSWidget.hpp  FGSWidget.ui  FSRItem.cpp  FSRItem.hpp  FSRItem.ui  FSRWidget.cpp  FSRWidget.hpp  FSRWidget.ui  FriendItem.cpp  FriendItem.hpp  FriendItem.ui  FriendWidget.cpp  (+89 more)
